# ahg_common

ahg_gazebo_simulation/: CMakeLists.txt  package.xml
ahg_gazebo_simulation/Media/models/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/DoorHandle/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/Tall-Cabinet/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/ahg_apartment/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/ahg_bookcase/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/ahg_table/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/cabdoor/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/chair_1/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/drawers/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/kitchencab/: model.config  model.sdf
ahg_gazebo_simulation/Media/models/shelf/: model.sdf
ahg_gazebo_simulation/Media/models/sink/: model.config  model.sdf
ahg_gazebo_simulation/worlds/: ahg_apartment.world
maps/1s/occ/: 1s.yaml
maps/2s/occ/: connectivity.yaml  (+5 more)
utexas_ahg/: CMakeLists.txt  package.xml
utexas_ahg/knowledge/: bwi.yaml
utexas_ahg/maps/: multimap.yaml
utexas_ahg/maps/1s/occ/: doors.yaml  locations.pgm  locations.yaml
utexas_ahg/maps/2/occ/: ahg_full.pgm  ahg_full.pgmZone.Identifier  ahg_full.yaml  connectivity.yaml  doors.yaml  doors_map.pgm  doors_map.yaml  locations.pgm  locations.yaml
utexas_ahg/maps/2s/occ/: 2s.yaml  connectivity.yaml  crop_map.py  doors.yaml  doors_map.yaml  locations.pgm  locations.yaml  rotated.yaml
(+3 files in other folders)
