<?xml version="1.0"?>
<package format="2">
  <name>ahg_gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The simulation for the simulated apartment at Anna Hiss Gymnasium.</description>

  <maintainer email="geethika.hemkumar@utexas.edu">Geethika Hemkumar</maintainer>
  <maintainer email="shikhar.gupta.tx@gmail.com">Shikhar Gupta</maintainer>
  <maintainer email="maxwell@cs.utexas.edu">Max Svetlik</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/ahg_common</url>
  <url type="bugtracker">https://github.com/utexas-bwi/ahg_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <gazebo_ros
        gazebo_media_path="${prefix}"
        gazebo_model_path="${prefix}/Media/models/"/>
  </export>
</package>
